<resources>
    <string name="app_name">AudioClient</string>
    <string name="start_Service">Start Service</string>
    <string name="end_Service">End Service</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="stop">Stop</string>
    <string name="getListClick">Click Here to Get List</string>


</resources>